overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
     --bg-color: #222831;
     --bg-shade-color: #393E46;
     --primary-color: #08D9D6;
-    --secodnary-color: ;
 }
 
 * {
@@ -18,13 +17,13 @@
 
 body {
     background: var(--bg-color);
+    overflow-x: hidden;
 }
 
 .container {
     width: 75%;
     margin: 0 auto;
     font-family: var(--primary-font);
-    overflow: hidden;
     /* width: 100%; */
 }
 
